--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,15 @@ body {
     box-shadow: 8px 8px #8ee5ee;
 }
 
+.face {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    box-shadow: 8px 8px #8ee5ee;
+    border-radius: 50%;
+}
+
 h1 {
     text-align: center;
     font-size: 60px;
@@ -57,5 +66,12 @@ h5 {
     font-size: 18px;
     color: #fff;
     background-color: #000;
+    padding: 10px;
+}
+
+h6 {
+    text-align: center;
+    font-size: 20px;
+    color: #000;
     padding: 10px;
 }
